@@ -100,28 +100,6 @@ end_import
 
 begin_import
 import|import
-name|java
-operator|.
-name|io
-operator|.
-name|OutputStream
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|lang
-operator|.
-name|reflect
-operator|.
-name|Method
-import|;
-end_import
-
-begin_import
-import|import
 name|com
 operator|.
 name|ibm
@@ -434,51 +412,10 @@ argument_list|(
 name|outputFile
 argument_list|)
 decl_stmt|;
-comment|// RBBIRuleBuilder.compileRules(rules, os);
-name|Class
-argument_list|<
-name|?
-argument_list|>
-name|builderClass
-init|=
-name|Class
+name|RuleBasedBreakIterator
 operator|.
-name|forName
+name|compileRules
 argument_list|(
-literal|"com.ibm.icu.text.RBBIRuleBuilder"
-argument_list|)
-decl_stmt|;
-name|Method
-name|method
-init|=
-name|builderClass
-operator|.
-name|getDeclaredMethod
-argument_list|(
-literal|"compileRules"
-argument_list|,
-name|String
-operator|.
-name|class
-argument_list|,
-name|OutputStream
-operator|.
-name|class
-argument_list|)
-decl_stmt|;
-name|method
-operator|.
-name|setAccessible
-argument_list|(
-literal|true
-argument_list|)
-expr_stmt|;
-name|method
-operator|.
-name|invoke
-argument_list|(
-literal|null
-argument_list|,
 name|rules
 argument_list|,
 name|os
