@@ -1,2 +1,0 @@
-AnyObjectId[fad20cf105a9effe8677440bdcc6fcf0a82823b2] was removed in git history.
-Apache SVN contains full history.
