@@ -60,6 +60,11 @@ API Changes
  * LUCENE-3141: add getter method to access fragInfos in FieldFragList.
    (Sujit Pal via Koji Sekiguchi)
 
+Build
+
+ * LUCENE-3149: Upgrade contrib/icu's ICU jar file to ICU 4.8. 
+   (Robert Muir)
+
 ======================= Lucene 3.2.0 =======================
 
 Changes in backwards compatibility policy
